--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,11 +145,8 @@ body
   #REUSED STYLE
 \*-----------------------------------*/
 
-.search-wrapper::before
-{
-  position: absolute;
-  top: 14px;
-  right: 12px;
+.search-wrapper::before,
+.load-more::before{
   content: "";
   width: 20px;
   height: 20px;
@@ -157,12 +154,33 @@ body
   border-radius:var(--radius-24);
   border-inline-end-color: transparent;
   animation: loading 500ms linear infinite;
+  display: none;
+}
+
+.search-wrapper::before{
+  position: absolute;
+  top: 14px;
+  right: 12px;
 }
 
 .search-wrapper.searching::before
 {
   display: block;
 }
+
+.load-more{
+      background-color: var(--primary-variant);
+      margin-inline: auto;
+      margin-block:36ox 60px;
+      
+}
+
+.load-more:is(:hover,:focus-visible){
+  --primary-varient:hsla(350,67%,39%,1);
+
+}
+
+.load-more.loading::before{display: block;}
 
 @keyframes loading 
 {
@@ -288,6 +306,35 @@ body
   content: "";
   min-width: 4px;
 }
+
+.separator{
+  width: 4px;
+  height: 4px;
+  background-color: var(--white-alpha-20);
+  border-radius: var(--radius-8);
+}
+
+.video-card{
+  background-image: url('../images/video-bg-icon.png');
+  aspect-ratio: 16/9;
+  flex-shrink: 0;
+  max-width: 500px;
+  width: calc(100% - 40px);
+}
+
+.container::after,
+.search-modal::after{
+  content:"";
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  background-image: linear-gradient(var(--bottom-overlay));
+  z-index: 1;
+  pointer-events: none;
+}
+
 
 
 
@@ -517,17 +564,6 @@ body
   z-index: 1;
 }
 
-.container::after{
-  content:"";
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 150px;
-  background-image: linear-gradient(var(--bottom-overlay));
-  z-index: 1;
-  pointer-events: none;
-}
 
 
 
@@ -730,8 +766,22 @@ body
   #MOVIE LIST PAGE
 \*-----------------------------------*/
 
+.genre-list.title-wrapper{
+      margin-block-end: 56px;
+}
+
+.grid-list{
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(20 0px,1fr));
+  column-gap:16px;
+  row-gap: 20px;
+}
 
 
+ :is(.genre-list,.search-modal):is(.movie-card,.card-banner){
+  width: 100%;
+}
+  
 
 
 /*-----------------------------------*\
@@ -739,6 +789,25 @@ body
 \*-----------------------------------*/
 
 
+.search-modal{
+  position: fixed;
+  top: 96px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: var(--surface);
+  overflow: overlay;
+  z-index: 4;
+  display: none ;
+}
+
+.search-modal.active{display: block ;}
+
+.search-modal.label{
+  color: var(--primary-variant);
+  font-weight: var(--weight-bold);
+  margin-block-end: 8px;
+}
 
 
 
